--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,23 @@
-click==8.1.3
+beautifulsoup4==4.12.2
+blinker==1.7.0
+click==8.1.7
+csscompressor==0.9.5
 feedgen==0.9.0
-Flask==2.2.3
-importlib-metadata==6.3.0
+Flask==3.0.1
+importlib-metadata==7.0.1
 itsdangerous==2.1.2
-Jinja2==3.1.2
-lxml==4.9.2
-Markdown==3.4.3
-MarkupSafe==2.1.2
+Jinja2==3.1.3
+lxml==5.1.0
+Markdown==3.5.2
+MarkupSafe==2.1.4
+mistune==2.0.5
+pillow==10.2.0
 python-dateutil==2.8.2
 python-slugify==8.0.1
-PyYAML==6.0
+PyYAML==6.0.1
 six==1.16.0
+soupsieve==2.5
 text-unidecode==1.3
 toml==0.10.2
-Werkzeug==2.2.3
-zipp==3.15.0
+Werkzeug==3.0.1
+zipp==3.17.0
